--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Jude Martin</h1>
+							<p>Software Engineer</p>
 						</div>
 
 						<nav id="nav">
