--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>I'm an Aspiring Software Development Professional currently pursuing Master's in Software Engineering at San Jose State University.
+							</p>
 
 							<div class="row">
 								<div class="4u">
