--- a/index.html
+++ b/index.html
@@ -150,12 +150,11 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I'm an Aspiring Software Development Professional currently pursuing Master's in Software Engineering at San Jose State University.</p>
+
+							<p>My tenure as an Analyst with Global Logic Software Pvt Ltd. a solution provider to the IT-Giant "Google India Pvt Ltd"  has given me a platform to explore the corporate world. Working within the Onsite Hyderabad Google campus on projects such as Sprouts create has given a global exposure  in the field of Content Engineering.Moreover the learning culture within Google campus has also helped me in keeping myself abreast in the areas of Value Creation and Business Operator.</p>
+
+							<p>During the role of an analyst I got an opportunity to serve as a Mentor and as a backup Pod-Lead which helped me enhance my communication and leadership skills.</p>
 
 						</div>
 					</section>
