--- a/index.html
+++ b/index.html
@@ -147,14 +147,11 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>San Jose State University</h3>
+                  <p class="info">Master's in Software Engineering  <span>&bull;</span> <em class="date">August 2014</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Currently a Master's student at San Jose State Univesity and specializing is Cloud Computing. My courses include Virtalization Technologies, Enterprise Distributed Systems,Cloud Computing.
                   </p>
 
                </div>
@@ -165,8 +162,8 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Jawaharlal Nehru Technological University </h3>
+                  <p class="info">Bachelor's in Information Technology <span>&bull;</span> <em class="date">May 2011</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -198,8 +195,8 @@
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>GlobalLogic, Inc. - Client Google Maps India.</h3>
+                  <p class="info">Analyst - Geo Content Reviewer <span>&bull;</span> <em class="date">April 2013 - July 2014</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -212,23 +209,7 @@
 
             </div> <!-- item end -->
 
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
-
-                  <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
+            <!-- item end -->
 
          </div> <!-- main-col end -->
 
@@ -254,12 +235,14 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Illustrator</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Wordpress</em></li>
-						<li><span class="bar-expand css"></span><em>CSS</em></li>
+					   <li><span class="bar-expand photoshop"></span><em>MySql</em></li>
+                  <li><span class="bar-expand illustrator"></span><em>Spring</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Hibernate</em></li>
+						<li><span class="bar-expand css"></span><em>Java</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                  <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
+                  <li><span class="bar-expand photoshop"></span><em>JavaScript</em></li>
+                  <li><span class="bar-expand jquery"></span><em>MOngoDB</em></li>
+                  
 					</ul>
 
 				</div><!-- end skill-bars -->
