--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Jude Martin.</h1>
-            <h3>I'm a San Jose based <span>Graduate student currently pursuing Master's</span>, <span>in Software Engineering</span> <span>at San Jose State University</span> I'm like to make and break Software and I'm really passionate about it. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a San Jose based <span>Graduate student currently pursuing Master's</span>, <span>in Software Engineering</span> <span>at San Jose State University</span> I like to make and break Software and I'm really passionate about it. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
