Updated the website

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Jude Martin - Resume </title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -28,7 +28,7 @@
 
    <!-- Favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
+	<link rel="shortcut icon" href="favicon.ico" >
 
 </head>
 
@@ -151,7 +151,7 @@
                   <p class="info">Master's in Software Engineering  <span>&bull;</span> <em class="date">August 2014</em></p>
 
                   <p>
-                  Currently a Master's student at San Jose State Univesity and specializing is Cloud Computing. My courses include Virtalization Technologies, Enterprise Distributed Systems,Cloud Computing.
+                  Currently a Master's student at San Jose State Univesity and specializing is Cloud Computing with a Current GPA of 3.56 /4.0 . My courses include Virtalization Technologies, Enterprise Distributed Systems,Cloud Computing.
                   </p>
 
                </div>
@@ -166,10 +166,7 @@
                   <p class="info">Bachelor's in Information Technology <span>&bull;</span> <em class="date">May 2011</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                     Graduated from Jawaharlal Nehru Technological University in First Class. The course work included DataStructures and Algorithms, Object oriented Programming.
                   </p>
 
                </div>
@@ -199,11 +196,16 @@
                   <p class="info">Analyst - Geo Content Reviewer <span>&bull;</span> <em class="date">April 2013 - July 2014</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Sprouts create is a support and maintenance project which involved analysis of new business request which includes peer review of the data and request details before processing it for creation into the Google Maps database.
                   </p>
+                  <p>
+                     <h4>Awards and Achievments: Google Geo Awards.</h4>
+                     <ul>
+                        <li type=circle><h5>Gold Award:</h5>For being an Exceptional Team Player and for multitasking with ease.</li>
+                        <li type=circle><h5>Silver Award:</h5> For being an Excellent mentor and a consistant performer.</li>
+                     </ul>   
+                  </p>
+
 
                </div>
 
@@ -715,10 +717,9 @@
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Jude Martin<br>
+						   San Jose, CA 95112 US<br>
+						   <span>(408) 667-0177</span>
 					   </p>
 
 				   </div>
@@ -773,8 +774,8 @@
             </ul>
 
             <ul class="copyright">
-               <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <!--<li>&copy; Copyright 2014 CeeVee</li>-->
+               <!--<li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>-->
             </ul>
 
          </div>
