--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/judeimg.jpg" alt="" />
 
          </div>
 
@@ -92,7 +92,7 @@
 
             <h2>About Me</h2>
 
-            <p>I'm an Aspiring Software Development Professional currently pursuing Master's in Software Engineering at San Jose State University.Each day I train my abs apart from Spring and Hibernate.
+            <p>I'm an Aspiring Software Development Professional currently pursuing Master's in Software Engineering at San Jose State University.
 
             My tenure as an Analyst with Global Logic Software Pvt Ltd. a solution provider to the IT-Giant "Google India Pvt Ltd" has given me a platform to explore the corporate world. Working within the Onsite Hyderabad Google campus on projects such as Sprouts create has given a global exposure in the field of Content Engineering.Moreover the learning culture within Google campus has also helped me in keeping myself abreast in the areas of Value Creation and Business Operator.
 
@@ -151,7 +151,7 @@
                   <p class="info">Master's in Software Engineering  <span>&bull;</span> <em class="date">August 2014</em></p>
 
                   <p>
-                  Currently a Master's student at San Jose State Univesity and specializing is Cloud Computing with a Current GPA of 3.56 /4.0 . My courses include Virtalization Technologies, Enterprise Distributed Systems,Cloud Computing.
+                  Currently a Master's student at San Jose State Univesity and specializing is Cloud Computing with a Current GPA of 3.62 /4.0 . My courses include Virtalization Technologies, Enterprise Distributed Systems,Cloud Computing.
                   </p>
 
                </div>
@@ -228,22 +228,19 @@
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>My Skills include as the following:
             </p>
 
 				<div class="bars">
 
 				   <ul class="skills">
 					   <li><span class="bar-expand photoshop"></span><em>MySql</em></li>
-                  <li><span class="bar-expand illustrator"></span><em>Spring</em></li>
-						<li><span class="bar-expand wordpress"></span><em>Hibernate</em></li>
+                  <li><span class="bar-expand illustrator"></span><em></em></li>
+						<li><span class="bar-expand wordpress"></span><em></em></li>
 						<li><span class="bar-expand css"></span><em>Java</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
                   <li><span class="bar-expand photoshop"></span><em>JavaScript</em></li>
-                  <li><span class="bar-expand jquery"></span><em>MOngoDB</em></li>
+                  <li><span class="bar-expand jquery"></span><em>MongoDB</em></li>
                   
 					</ul>
 
@@ -557,203 +554,17 @@
 
    <!-- Call-To-Action Section
    ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
-
-         <div class="seven columns">
-
-            <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
-            <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
-
-         </div>
-
-         <div class="three columns action">
-
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Sign Up Now</a>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
+   <!-- Call-To-Action Section End-->
 
 
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
-
-      <div class="text-container">
-
-         <div class="row">
-
-            <div class="two columns header-col">
-
-               <h1><span>Client Testimonials</span></h1>
-
-            </div>
-
-            <div class="ten columns flex-container">
-
-               <div class="flexslider">
-
-                  <ul class="slides">
-
-                     <li>
-                        <blockquote>
-                           <p>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-                           to do what you believe is great work. And the only way to do great work is to love what you do.
-                           If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-                           </p>
-                           <cite>Steve Jobs</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                     <li>
-                        <blockquote>
-                           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                           Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                           nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
-                           </p>
-                           <cite>Mr. Adobe</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
-
-                  </ul>
-
-               </div> <!-- div.flexslider ends -->
-
-            </div> <!-- div.flex-container ends -->
-
-         </div> <!-- row ends -->
-
-       </div>  <!-- text-container ends -->
-
-   </section> <!-- Testimonials Section End-->
+    <!-- Testimonials Section End-->
 
 
    <!-- Contact Section
    ================================================== -->
-   <section id="contact">
-
-         <div class="row section-head">
-
-            <div class="two columns header-col">
-
-               <h1><span>Get In Touch.</span></h1>
-
-            </div>
-
-            <div class="ten columns">
-
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                  </p>
-
-            </div>
-
-         </div>
-
-         <div class="row">
-
-            <div class="eight columns">
-
-               <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
-					<fieldset>
-
-                  <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactName" name="contactName">
-                  </div>
-
-                  <div>
-						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input type="text" value="" size="35" id="contactEmail" name="contactEmail">
-                  </div>
-
-                  <div>
-						   <label for="contactSubject">Subject</label>
-						   <input type="text" value="" size="35" id="contactSubject" name="contactSubject">
-                  </div>
-
-                  <div>
-                     <label for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea cols="50" rows="15" id="contactMessage" name="contactMessage"></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
-                  </div>
-
-					</fieldset>
-				   </form> <!-- Form End -->
-
-               <!-- contact-warning -->
-               <div id="message-warning"> Error boy</div>
-               <!-- contact-success -->
-				   <div id="message-success">
-                  <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-				   </div>
-
-            </div>
-
-
-            <aside class="four columns footer-widgets">
-
-               <div class="widget widget_contact">
-
-					   <h4>Address and Phone</h4>
-					   <p class="address">
-						   Jude Martin<br>
-						   San Jose, CA 95112 US<br>
-						   <span>(408) 667-0177</span>
-					   </p>
-
-				   </div>
-
-               <div class="widget widget_tweets">
-
-                  <h4 class="widget-title">Latest Tweets</h4>
-
-                  <ul id="twitter">
-                     <li>
-                        <span>
-                        This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                        Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">2 Days Ago</a></b>
-                     </li>
-                     <li>
-                        <span>
-                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                        eaque ipsa quae ab illo inventore veritatis et quasi
-                        <a href="#">http://t.co/CGIrdxIlI3</a>
-                        </span>
-                        <b><a href="#">3 Days Ago</a></b>
-                     </li>
-                  </ul>
-
-		         </div>
-
-            </aside>
-
-      </div>
-
-   </section> <!-- Contact Section End-->
+    <!-- Contact Section End-->
 
 
    <!-- footer
