--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
 				<div class="bars">
 
 				   <ul class="skills">
-					   <li><span class="bar-expand photoshop"></span><em>MySql</em></li>
+					   <li><span class="bar-expand css"></span><em>Java</em></li>
+                  <li><span class="bar-expand photoshop"></span><em>MySql</em></li>
                   <li><span class="bar-expand css"></span><em>AWS</em></li>
-						<li><span class="bar-expand wordpress"></span><em></em></li>
-						<li><span class="bar-expand css"></span><em>Java</em></li>
+						<li><span class="bar-expand wordpress"></span><em>Design Patterns</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
                   <li><span class="bar-expand photoshop"></span><em>JavaScript</em></li>
                   <li><span class="bar-expand jquery"></span><em>MongoDB</em></li>
