--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 					<div class="columns download">
 						<p>
-							<a href="http://bit.ly/1IWzSON" class="button"><i
+							<a href="http://bit.ly/1TGtVaK" class="button"><i
 								class="fa fa-download"></i>Download Resume</a>
 						</p>
 					</div>
