added few changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="banner-text">
 				<h1 class="responsive-headline">I'm Jude Martin.</h1>
 				<h3>
-					I'm a San Jose based <span>Graduate student currently
+					I'm a Bay Area based <span>Graduate student currently
 						pursuing Master's</span>, <span>in Software Engineering</span> <span>at
 						San Jose State University</span> I like to make and break Software and
 					I'm really passionate about it. Let's <a class="smoothscroll"
@@ -231,8 +231,7 @@
 								Present</em>
 						</p>
 
-						<p>Currently working with the COSMOS team on Java to create
-							and test API's.</p>
+						<p>Currently working with the COSMOS team on levereging cutting edge Java Technologies.</p>
 					</div>
 					<div class="twelve columns">
 
